--- a/races.html
+++ b/races.html
@@ -27,14 +27,12 @@
         <div class="race-text">
           <h1>Dragonborn</h1>
           <p>
-          Predkovia dragonbornov sa vyliahli z vajec chromatických a kovových drakov.<br>
-          Jedno rozprávanie hovorí, že tieto vajcia požehnali dračí bohovia Bahamut a Tiamat,<br>
-          ktorí chceli zaplniť multivesmír bytosťami stvorenými na svoj obraz.<br>
-          Iné zas tvrdí, že prví dragonborn boli stvorení samotnými drakmi bez požehnania bohov.<br>
-          Nech už je ich pôvod akýkoľvek, dragonborni si našli domov na materiálnej sfére.<br>
-          Dragonborn vyzerá ako dvojnohý, bezkrídly drak,<br>
-          šupinatý, jasnooký a robustnej postavy s rohmi na hlave.<br>
-          Ich sfarbenie aj ďalšie črty pripomínajú ich dračích predkov.<br>
+          Predkovia dragonbornov sa vyliahli z vajec chromatických a kovových drakov.
+          Jedno rozprávanie hovorí, že tieto vajcia požehnali dračí bohovia Bahamut a Tiamat, ktorí chceli zaplniť multivesmír bytosťami stvorenými na svoj obraz.
+          Iné zas tvrdí, že prví dragonborn boli stvorení samotnými drakmi bez požehnania bohov.
+          Nech už je ich pôvod akýkoľvek, dragonborni si našli domov na materiálnej sfére.
+          Dragonborn vyzerá ako dvojnohý, bezkrídly drak, šupinatý, jasnooký a robustnej postavy s rohmi na hlave.
+          Ich sfarbenie aj ďalšie črty pripomínajú ich dračích predkov.
           </p>
         </div>
       </div>
@@ -43,17 +41,14 @@
         <div class="race-text">
           <h1>Trpaslik</h1>
           <p>
-            Trpaslíci boli v dávnych časoch povolaní zo zeme božstvom kovárne.<br>
-            Toto božstvo darovalo trpaslíkom prirodzenú náklonnosť ku kameňu a kovu a k životu pod zemou.<br>
-            Zároveň ich stvorilo odolných ako hory, s dĺžkou života približne 350 rokov.<br>
-            Nízki a často bradatí pôvodní trpaslíci vytesávali mestá a pevnosti do horských svahov a pod zem.<br>
-            Ich najstaršie legendy hovoria o konfliktoch s príšerami z horských štítov a Podtemna,<br>
-            či už to boli obrovití giganti alebo podzemné hrôzy.<br>
-            Inšpirovaní týmito príbehmi trpaslíci z každej kultúry často spievajú o hrdinských skutkoch,<br>
-            najmä o tom, ako malí dokázali premôcť mocných.<br>
-            Prvé osídlenia trpaslíkov boli vybudované v kopcoch alebo horách a rodiny,<br>
-            ktoré odvodzujú svoj pôvod od týchto miest, sa nazývajú kopcoví trpaslíci alebo horskí trpaslíci.<br>
-            Takéto spoločenstvá existujú napríklad v prostrediach Greyhawku a Dragonlance.<br>
+            Trpaslíci boli v dávnych časoch povolaní zo zeme božstvom kovárne.
+            Toto božstvo darovalo trpaslíkom prirodzenú náklonnosť ku kameňu a kovu a k životu pod zemou.
+            Zároveň ich stvorilo odolných ako hory, s dĺžkou života približne 350 rokov.
+            Nízki a často bradatí pôvodní trpaslíci vytesávali mestá a pevnosti do horských svahov a pod zem.
+            Ich najstaršie legendy hovoria o konfliktoch s príšerami z horských štítov a Podtemna, či už to boli obrovití giganti alebo podzemné hrôzy.
+            Inšpirovaní týmito príbehmi trpaslíci z každej kultúry často spievajú o hrdinských skutkoch, najmä o tom, ako malí dokázali premôcť mocných.
+            Prvé osídlenia trpaslíkov boli vybudované v kopcoch alebo horách a rodiny, ktoré odvodzujú svoj pôvod od týchto miest, sa nazývajú kopcoví trpaslíci alebo horskí trpaslíci.
+            Takéto spoločenstvá existujú napríklad v prostrediach Greyhawku a Dragonlance.
           </p>
         </div>
         <img src="images/trpaslik.jpg" alt="Trpaslik" style="width:200px;height:300px;">
@@ -64,19 +59,17 @@
         <div class="race-text">
           <h1>Elf</h1>
           <p>
-          Prvých elfov stvoril boh Corellon a tí dokázali podľa vôle meniť svoje podoby.<br>
-          Túto schopnosť však stratili, keď ich Corellon prekľal za to, že sa spolčili s bohyňou Lolth,<br>
-          ktorá sa neúspešne pokúsila uchvátiť jeho panstvo.<br>
-          Keď bola Lolth zvrhnutá do Priepasti, väčšina elfov ju zaprela a získala späť Corellonovo odpustenie,<br>
-          no to, čo im raz vzal, bolo navždy stratené.<br>
-          Bez schopnosti premieňať sa podľa vôle sa elfovia stiahli do Feywild,<br>
-          kde ich žiaľ ešte zosilnil vplyv tejto sféry.<br>
+          Prvých elfov stvoril boh Corellon a tí dokázali podľa vôle meniť svoje podoby.
+          Túto schopnosť však stratili, keď ich Corellon prekľal za to, že sa spolčili s bohyňou Lolth,
+          ktorá sa neúspešne pokúsila uchvátiť jeho panstvo.
+          Keď bola Lolth zvrhnutá do Priepasti, väčšina elfov ju zaprela a získala späť Corellonovo odpustenie, no to, čo im raz vzal, bolo navždy stratené.
+          Bez schopnosti premieňať sa podľa vôle sa elfovia stiahli do Feywild, kde ich žiaľ ešte zosilnil vplyv tejto sféry.
           Časom ich však zvedavosť priviedla k preskúmavaniu ďalších sfér existencie, vrátane svetov Materiálnej sféry.
-          Elfovia majú špicaté uši a nemajú ochlpenie na tvári ani na tele.<br>
-          Dožívajú sa približne 750 rokov a nespia, ale namiesto toho upadajú do tranzu, keď potrebujú oddychovať.<br>
-          V tomto stave si zachovávajú vedomie o okolí, zatiaľ čo sa ponárajú do spomienok a meditácií.<br>
-          Prostredie, v ktorom elfovia žijú po tisícročia, ich jemne pretvára a udeľuje im isté druhy mágie.<br>
-          Drowovia, vysokí elfovia a lesní elfovia sú príkladmi elfov, ktorí sa takto premenili.<br>
+          Elfovia majú špicaté uši a nemajú ochlpenie na tvári ani na tele.
+          Dožívajú sa približne 750 rokov a nespia, ale namiesto toho upadajú do tranzu, keď potrebujú oddychovať.
+          V tomto stave si zachovávajú vedomie o okolí, zatiaľ čo sa ponárajú do spomienok a meditácií.
+          Prostredie, v ktorom elfovia žijú po tisícročia, ich jemne pretvára a udeľuje im isté druhy mágie.
+          Drowovia, vysokí elfovia a lesní elfovia sú príkladmi elfov, ktorí sa takto premenili.
           </p>
         </div>
       </div>
@@ -85,16 +78,14 @@
         <div class="race-text">
           <h1>Gnóm</h1>
           <p>
-          Gnómovia sú magický národ stvorený bohmi vynálezov, ilúzií a podzemného života.<br>
-          Najstarších gnómov iné národy vídali len zriedkavo,<br>
-          a to kvôli ich utajenej povahe a sklonu žiť v lesoch a norách.<br>
-          To, čo im chýbalo na veľkosti, si vynahrádzali bystrosťou.<br>
-          Predátorov mátli pascami a spletitými tunelmi.<br>
-          Od bohov, ako boli Garl Glittergold, Baervan Wildwanderer a Baravar Cloakshadow,<br>
-          ktorí ich navštevovali v prestrojení, sa naučili čarodejníctvo.<br>
-          Táto mágia nakoniec vytvorila línie lesných a skalných gnómov.<br>
-          Gnómovia sú drobní, s veľkými očami a špicatými ušami, a dožívajú sa približne 425 rokov.<br>
-          Mnohí z nich majú radi pocit strechy nad hlavou – aj keď tou „strechou“ nie je nič viac než klobúk.<br>
+          Gnómovia sú magický národ stvorený bohmi vynálezov, ilúzií a podzemného života.
+          Najstarších gnómov iné národy vídali len zriedkavo, a to kvôli ich utajenej povahe a sklonu žiť v lesoch a norách.
+          To, čo im chýbalo na veľkosti, si vynahrádzali bystrosťou.
+          Predátorov mátli pascami a spletitými tunelmi.
+          Od bohov, ako boli Garl Glittergold, Baervan Wildwanderer a Baravar Cloakshadow, ktorí ich navštevovali v prestrojení, sa naučili čarodejníctvo.
+          Táto mágia nakoniec vytvorila línie lesných a skalných gnómov.
+          Gnómovia sú drobní, s veľkými očami a špicatými ušami, a dožívajú sa približne 425 rokov.
+          Mnohí z nich majú radi pocit strechy nad hlavou – aj keď tou „strechou“ nie je nič viac než klobúk.
           </p>
         </div>
         <img src="images/gnome2.jpg" alt="Gnome" style="width:200px;height:300px;">
@@ -105,8 +96,11 @@
         <div class="race-text">
           <h1>Tiefling</h1>
           <p>
-          Tieflingovia sa buď rodia v Nižších sférach, alebo majú démonických predkov, ktorí odtiaľ pochádzajú. Tiefling (vyslovuje sa TÍ-fling) je pokrvne spätý s diablom, démonom alebo iným Príšerom. Toto spojenie s Nižšími sférami predstavuje tieflingovo démonické dedičstvo, ktoré so sebou nesie prísľub moci, no nemá žiadny vplyv na jeho morálny postoj.
-          Tiefling si sám volí, či svoje démonické dedičstvo prijme, alebo ním bude zarmútený. Tri podoby tohto dedičstva sú opísané nižšie.
+          Tieflingovia sa buď rodia v Nižších sférach, alebo majú démonických predkov, ktorí odtiaľ pochádzajú.
+          Tiefling (vyslovuje sa TÍ-fling) je pokrvne spätý s diablom, démonom alebo iným Príšerom.
+          Toto spojenie s Nižšími sférami predstavuje tieflingovo démonické dedičstvo, ktoré so sebou nesie prísľub moci, no nemá žiadny vplyv na jeho morálny postoj.
+          Tiefling si sám volí, či svoje démonické dedičstvo prijme, alebo ním bude zarmútený.
+          Tri podoby tohto dedičstva sú opísané nižšie.
           </p>
         </div>
       </div>
@@ -115,8 +109,14 @@
         <div class="race-text">
           <h1>Ork</h1>
           <p>
-          Orkovia odvodzujú svoj pôvod od Gruumsha, mocného boha, ktorý kedysi putoval rozľahlými priestormi Materiálnej sféry. Gruumsh obdaril svoje deti darmi, ktoré im mali pomôcť putovať po nekonečných stepiach, rozsiahlých jaskyniach a rozbúrených moriach a čeliť príšerám, ktoré tam číhajú. Aj keď svoju oddanosť obrátia k iným bohom, orkovia si Gruumshove dary zachovávajú: vytrvalosť, odhodlanie a schopnosť vidieť v tme.
-          Orkovia sú v priemere vysokí a zavalití. Majú sivú pokožku, uši so špicatými hrotmi a výrazné spodné špičáky pripomínajúce malé kly. Orcím mladíkom sa na niektorých svetoch rozprávajú príbehy o veľkých putovaniach a ťažkostiach ich predkov. Inšpirovaní týmito rozprávaniami mnohí z nich uvažujú, kedy ich Gruumsh povolá, aby vyrovnali hrdinské činy dávnych čias, a či si vyslúžia jeho priazeň. Iní orkovia sú spokojní, keď nechajú staré príbehy v minulosti a hľadajú vlastnú cestu.
+          Orkovia odvodzujú svoj pôvod od Gruumsha, mocného boha, ktorý kedysi putoval rozľahlými priestormi Materiálnej sféry.
+          Gruumsh obdaril svoje deti darmi, ktoré im mali pomôcť putovať po nekonečných stepiach, rozsiahlých jaskyniach a rozbúrených moriach a čeliť príšerám, ktoré tam číhajú.
+          Aj keď svoju oddanosť obrátia k iným bohom, orkovia si Gruumshove dary zachovávajú: vytrvalosť, odhodlanie a schopnosť vidieť v tme.
+          Orkovia sú v priemere vysokí a zavalití.
+          Majú sivú pokožku, uši so špicatými hrotmi a výrazné spodné špičáky pripomínajúce malé kly.
+          Orcím mladíkom sa na niektorých svetoch rozprávajú príbehy o veľkých putovaniach a ťažkostiach ich predkov.
+          Inšpirovaní týmito rozprávaniami mnohí z nich uvažujú, kedy ich Gruumsh povolá, aby vyrovnali hrdinské činy dávnych čias, a či si vyslúžia jeho priazeň.
+          Iní orkovia sú spokojní, keď nechajú staré príbehy v minulosti a hľadajú vlastnú cestu.
           </p>
         </div>
         <img src="images/orc.jpg" alt="Orc" style="width:200px;height:300px;">
@@ -127,8 +127,12 @@
         <div class="race-text">
           <h1>Hobit</h1>
           <p>
-          Hobiti, milovaní a vedení bohmi, ktorí si cenia život, domov a rodinné krby, majú prirodzenú náklonnosť k idylickým útočiskám, kde ich život formuje rodina a spoločenstvo. Napriek tomu mnohí hobiti oplývajú odvážnym a dobrodružným duchom, ktorý ich vedie na cesty objavovania, dáva im možnosť spoznávať širší svet a nachádzať nových priateľov. Ich postava – veľkosťou podobná ľudskému dieťaťu – im umožňuje nenápadne prechádzať davom a pretlačiť sa aj cez úzke priestory.
-          Ktokoľvek, kto strávil čas medzi hobitmi, najmä medzi hobitími dobrodruhmi, sa pravdepodobne stal svedkom povestného „hobitieho šťastia“ v praxi. Keď sa hobit ocitne v smrteľnom nebezpečenstve, zdá sa, že neviditeľná sila zasiahne v jeho prospech. Mnohí hobiti veria v moc šťastia a tento nezvyčajný dar pripisujú jednému alebo viacerým svojim dobrotivým bohom, medzi ktorých patrí Yondalla, Brandobaris a Charmalaine. Rovnaký dar môže prispievať aj k ich dlhovekosti (približne 150 rokov).
+          Hobiti, milovaní a vedení bohmi, ktorí si cenia život, domov a rodinné krby, majú prirodzenú náklonnosť k idylickým útočiskám, kde ich život formuje rodina a spoločenstvo.
+          Napriek tomu mnohí hobiti oplývajú odvážnym a dobrodružným duchom, ktorý ich vedie na cesty objavovania, dáva im možnosť spoznávať širší svet a nachádzať nových priateľov. Ich postava – veľkosťou podobná ľudskému dieťaťu – im umožňuje nenápadne prechádzať davom a pretlačiť sa aj cez úzke priestory.
+          Ktokoľvek, kto strávil čas medzi hobitmi, najmä medzi hobitími dobrodruhmi, sa pravdepodobne stal svedkom povestného „hobitieho šťastia“ v praxi.
+          Keď sa hobit ocitne v smrteľnom nebezpečenstve, zdá sa, že neviditeľná sila zasiahne v jeho prospech.
+          Mnohí hobiti veria v moc šťastia a tento nezvyčajný dar pripisujú jednému alebo viacerým svojim dobrotivým bohom, medzi ktorých patrí Yondalla, Brandobaris a Charmalaine.
+          Rovnaký dar môže prispievať aj k ich dlhovekosti (približne 150 rokov).
           </p>
         </div>
       </div>
@@ -137,8 +141,11 @@
         <div class="race-text">
           <h1>Človek</h1>
           <p>
-          Ľudia sa nachádzajú naprieč celým multivesmírom a sú takí rozmanití, ako sú početní. Usilujú sa dosiahnuť čo najviac počas rokov, ktoré im boli dané. Ich ambície a vynaliezavosť sú na mnohých svetoch obdivované, rešpektované, ale aj obávané.
-          Ľudia sú rozmanití vzhľadom rovnako ako obyvatelia Zeme a uctievajú mnohých bohov. Učenci sa sporia o pôvod ľudstva, no jedno z najstarších známych ľudských zhromaždení sa údajne odohralo v Sigile, toroidnom meste v srdci multivesmíru, kde vznikol spoločný jazyk. Odtiaľ sa ľudia mohli rozšíriť do všetkých kútov multivesmíru a so sebou priniesť kozmopolitného ducha Mesta dverí.
+          Ľudia sa nachádzajú naprieč celým multivesmírom a sú takí rozmanití, ako sú početní.
+          Usilujú sa dosiahnuť čo najviac počas rokov, ktoré im boli dané. Ich ambície a vynaliezavosť sú na mnohých svetoch obdivované, rešpektované, ale aj obávané.
+          Ľudia sú rozmanití vzhľadom rovnako ako obyvatelia Zeme a uctievajú mnohých bohov.
+          Učenci sa sporia o pôvod ľudstva, no jedno z najstarších známych ľudských zhromaždení sa údajne odohralo v Sigile, toroidnom meste v srdci multivesmíru, kde vznikol spoločný jazyk.
+          Odtiaľ sa ľudia mohli rozšíriť do všetkých kútov multivesmíru a so sebou priniesť kozmopolitného ducha Mesta dverí.
           </p>
         </div>
         <img src="images/human.jpg" alt="Human" style="width:200px;height:300px;">
