--- a/races.html
+++ b/races.html
@@ -123,7 +123,7 @@
       </div>
 
       <div class="race-section right">
-        <img src="images/halfling.jpg" alt="Halfling" style="width:200px;height:300px;">
+        <img src="images/hobit.jpg" alt="Hobit" style="width:200px;height:300px;">
         <div class="race-text">
           <h1>Hobit</h1>
           <p>
