--- a/classes.html
+++ b/classes.html
@@ -25,7 +25,7 @@
       <div class="race-section right">
         <img src="images/barbarian.jpg" alt="Barbarian" style="width:100px;height:100px;">
         <div class="race-text">
-          <h1>Barbar</h1>
+          <h1>Barbarian</h1>
           <p>
           Barbari sú mocní bojovníci, ktorí čerpajú silu z prapôvodných síl multivesmíru, prejavujúcich sa ako Zúrivosť. Nie je to iba obyčajná emócia – a už vôbec nie iba hnev – ale stelesnenie dravčej divokosti, zúrivosti búrky a nepokoja mora.
           Niektorí barbari vnímajú svoju Zúrivosť ako divokého ducha alebo uctievaného predka. Iní ju považujú za spojenie s bolesťou a úzkosťou sveta, za neosobitý uzol divokej mágie alebo za prejav svojej najhlbšej podstaty. Pre každého barbara je Zúrivosť mocou, ktorá živí nielen jeho bojové schopnosti, ale aj nadprirodzené reflexy a zostrené zmysly.
@@ -155,7 +155,7 @@
 
       <div class="race-section">
         <div class="race-text">
-          <h1>Čarodejník</h1>
+          <h1>Wizard</h1>
           <p>
           Kúzelníci (Wizards) sú definovaní svojím dôkladným štúdiom vnútorného fungovania mágie. Vyslovujú kúzla explozívneho ohňa, tryskajúceho blesku, jemného klamu či ohromujúcich premien. Ich mágia dokáže privolať príšery z iných sfér, nahliadnuť do budúcnosti alebo vytvoriť ochranné bariéry. Najmocnejšie kúzla menia jednu látku na inú, privolávajú meteority z neba alebo otvárajú portály do iných svetov.
           Väčšina kúzelníkov pristupuje k mágii akademicky. Skúmajú teoretické základy mágie, najmä kategorizáciu kúziel do jednotlivých škôl mágie. Renomovaní kúzelníci ako Bigby, Tasha, Mordenkainen či Yolande stavali na svojich štúdiách a vynašli ikonické kúzla, ktoré sú dnes využívané naprieč multivesmírom.
