--- a/classes.html
+++ b/classes.html
@@ -71,7 +71,7 @@
       </div>
 
       <div class="race-section right">
-        <img src="images/figter.jpg" alt="Fighter" style="width:100px;height:100px;">
+        <img src="images/fighter.jpg" alt="Fighter" style="width:100px;height:100px;">
         <div class="race-text">
           <h1>Fighter</h1>
           <p>
