--- a/weapons.html
+++ b/weapons.html
@@ -21,40 +21,41 @@
   </header>
 
   <main>
-    <section>
-      <h2>Bežné zbrane</h2>
-
-      <!-- tabuľka -->
-      <table border="1">
-        <tr>
-          <th>Zbraň</th>
-          <th>Typ</th>
-          <th>Poškodenie</th>
-        </tr>
-        <tr>
-          <td>Meč</td>
-          <td>Blízky boj</td>
-          <td>1d8</td>
-        </tr>
-        <tr>
-          <td>Luk</td>
-          <td>Na diaľku</td>
-          <td>1d6</td>
-        </tr>
-        <tr>
-          <td>Sekera</td>
-          <td>Blízky boj</td>
-          <td>1d10</td>
-        </tr>
-      </table>
-
-      <!-- obrázky -->
-      <div class="weapon-gallery">
-        <img src="images/sword.jpg" alt="Sword" width="150">
-        <img src="images/bow.jpg" alt="Bow" width="150">
-        <img src="images/axe.jpg" alt="Axe" width="150">
-      </div>
-    </section>
+    <div class="content">
+      <div class="center">
+        <h2>Bežné zbrane</h2>
+  
+        <!-- tabuľka -->
+        <table border="1">
+          <tr>
+            <th>Zbraň</th>
+            <th>Typ</th>
+            <th>Poškodenie</th>
+          </tr>
+          <tr>
+            <td>Meč</td>
+            <td>Blízky boj</td>
+            <td>1d8</td>
+          </tr>
+          <tr>
+            <td>Luk</td>
+            <td>Na diaľku</td>
+            <td>1d6</td>
+          </tr>
+          <tr>
+            <td>Sekera</td>
+            <td>Blízky boj</td>
+            <td>1d10</td>
+          </tr>
+        </table>
+  
+        <!-- obrázky -->
+        <div class="weapon-gallery">
+          <img src="images/sword.jpg" alt="Sword" width="150">
+          <img src="images/bow.jpg" alt="Bow" width="150">
+          <img src="images/axe.jpg" alt="Axe" width="150">
+        </div>
+    </div>
   </main>
 
 </body>
