--- a/weapons.html
+++ b/weapons.html
@@ -26,7 +26,7 @@
         <h2>Bežné zbrane</h2>
   
         <!-- tabuľka -->
-        <table border="1">
+        <table style="width:100%">
           <tr>
             <th>Zbraň</th>
             <th>Typ</th>
