--- a/weapons.html
+++ b/weapons.html
@@ -27,22 +27,22 @@
   
         <!-- tabuľka -->
         <table style="width:100%">
-          <tr>
+          <tr style="height:100px">
             <th>Zbraň</th>
             <th>Typ</th>
             <th>Poškodenie</th>
           </tr>
-          <tr>
+          <tr style="height:100px">
             <td>Meč</td>
             <td>Blízky boj</td>
             <td>1d8</td>
           </tr>
-          <tr>
+          <tr style="height:100px">
             <td>Luk</td>
             <td>Na diaľku</td>
             <td>1d6</td>
           </tr>
-          <tr>
+          <tr style="height:100px">
             <td>Sekera</td>
             <td>Blízky boj</td>
             <td>1d10</td>
