--- a/weapons.html
+++ b/weapons.html
@@ -28,9 +28,9 @@
         <!-- tabuľka -->
         <table style="width:100%">
           <tr style="height:100px">
-            <th>Zbraň</th>
-            <th>Typ</th>
-            <th>Poškodenie</th>
+            <th style="width:30%">Zbraň</th>
+            <th style="width:30%">Typ</th>
+            <th style="width:20%">Poškodenie</th>
           </tr>
           <tr style="height:100px">
             <td>Meč</td>
