--- a/index.html
+++ b/index.html
@@ -47,6 +47,14 @@
         </p>
         <img src="images/dnd.jpg" alt="Boj" width="800" style="border-radius:15px;">
       </div>
+
+      <div class="footer">
+            <a href="https://www.facebook.com/gaming/valorant" class="fa fa-facebook" target="_blank"></a>
+            <a href="https://twitter.com/playvalorant" class="fa fa-twitter" target="_blank"></a>
+            <a href="https://www.youtube.com/c/PlayVALORANT" class="fa fa-youtube-play" target="_blank"></a>
+            <a href="https://www.instagram.com/playvalorantofficial/" class="fa fa-instagram" target="_blank"></a>
+            <a href="mailto:bartkomrtn@gmail.com" class="fa fa-envelope"></a>
+      </div>
     </div>
   </main>
 
