--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>D&D Úvod</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
 
@@ -42,12 +43,31 @@
         <h1>Prečo to ľudia milujú?</h1>
         <p>
           D&D nie je o víťazstve alebo prehre. Je to o <strong>spolupráci, kreativite a zábave</strong>.<br>
-          Môžete sa smiať, keď váš kúzelník omylom vystrelí ohnivú guľu do vlastnej party, alebo oslavovať, keď konečne porazíte draka, ktorý terabil dedinu.<br>
+          Môžete sa smiať, keď váš kúzelník omylom vystrelí ohnivú guľu do vlastnej party, alebo oslavovať,<br>
+          keď konečne porazíte draka, ktorý terabil dedinu.<br>
           Potrebujete len <strong>papier, ceruzku, kocky a predstavivosť</strong>. Všetko ostatné príde samo – a tento web vám ukáže, ako začať.<br>
         </p>
         <img src="images/dnd.jpg" alt="Boj" width="800" style="border-radius:15px;">
       </div>
 
+      <section class="footer">
+        <a href="https://www.facebook.com/gaming/valorant" target="_blank" rel="noopener" aria-label="Facebook">
+          <i class="fab fa-facebook-f"></i>
+        </a>
+        <a href="https://twitter.com/playvalorant" target="_blank" rel="noopener" aria-label="Twitter">
+          <i class="fab fa-twitter"></i>
+        </a>
+        <a href="https://www.youtube.com/c/PlayVALORANT" target="_blank" rel="noopener" aria-label="YouTube">
+          <i class="fab fa-youtube"></i>
+        </a>
+        <a href="https://www.instagram.com/playvalorantofficial/" target="_blank" rel="noopener" aria-label="Instagram">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="mailto:bartkomrtn@gmail.com" aria-label="Email">
+          <i class="fas fa-envelope"></i>
+        </a>
+      </section>
+      
     </div>
   </main>
 
