--- a/index.html
+++ b/index.html
@@ -51,19 +51,19 @@
       </div>
 
       <section class="footer">
-        <a href="https://www.facebook.com/gaming/valorant" target="_blank" rel="noopener" aria-label="Facebook">
+        <a href="https://www.facebook.com/dndbeyond" target="_blank" rel="noopener" aria-label="Facebook">
           <i class="fab fa-facebook-f"></i>
         </a>
-        <a href="https://twitter.com/playvalorant" target="_blank" rel="noopener" aria-label="Twitter">
+        <a href="https://x.com/dndbeyond" target="_blank" rel="noopener" aria-label="Twitter">
           <i class="fab fa-twitter"></i>
         </a>
-        <a href="https://www.youtube.com/c/PlayVALORANT" target="_blank" rel="noopener" aria-label="YouTube">
+        <a href="https://www.youtube.com/channel/UCPy-338BEVgDkQade0qJmkw" target="_blank" rel="noopener" aria-label="YouTube">
           <i class="fab fa-youtube"></i>
         </a>
-        <a href="https://www.instagram.com/playvalorantofficial/" target="_blank" rel="noopener" aria-label="Instagram">
+        <a href="https://www.instagram.com/dndbeyond/" target="_blank" rel="noopener" aria-label="Instagram">
           <i class="fab fa-instagram"></i>
         </a>
-        <a href="mailto:bartkomrtn@gmail.com" aria-label="Email">
+        <a href="ranusa@stud.uniza.sk" aria-label="Email">
           <i class="fas fa-envelope"></i>
         </a>
       </section>
