--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <img src="images/dnd.jpg" alt="Boj" width="800" style="border-radius:15px;">
       </div>
 
-      <section class="footer">
+      <div class="footer">
         <a href="https://www.facebook.com/dndbeyond" target="_blank" rel="noopener" aria-label="Facebook">
           <i class="fab fa-facebook-f"></i>
         </a>
@@ -63,7 +63,7 @@
         <a href="https://www.instagram.com/dndbeyond/" target="_blank" rel="noopener" aria-label="Instagram">
           <i class="fab fa-instagram"></i>
         </a>
-      </section>
+      </div>
       
     </div>
   </main>
