--- a/weapons.html
+++ b/weapons.html
@@ -48,6 +48,22 @@
             <td>1d10</td>
           </tr>
         </table>
+
+        <div class="footer">
+        <a href="https://www.facebook.com/dndbeyond" target="_blank" rel="noopener" aria-label="Facebook">
+          <i class="fab fa-facebook-f"></i>
+        </a>
+        <a href="https://x.com/dndbeyond" target="_blank" rel="noopener" aria-label="Twitter">
+          <i class="fab fa-twitter"></i>
+        </a>
+        <a href="https://www.youtube.com/channel/UCPy-338BEVgDkQade0qJmkw" target="_blank" rel="noopener" aria-label="YouTube">
+          <i class="fab fa-youtube"></i>
+        </a>
+        <a href="https://www.instagram.com/dndbeyond/" target="_blank" rel="noopener" aria-label="Instagram">
+          <i class="fab fa-instagram"></i>
+        </a>
+      </div>
+        
     </div>
   </main>
 
