--- a/form.html
+++ b/form.html
@@ -21,7 +21,7 @@
   </header>
 
   <main>
-    <section>
+    <div class:"content">
       <h2 id="top">Kontaktný formulár</h2>
       <a href="#form">Skoč na formulár</a>
 
@@ -41,7 +41,23 @@
       </form>
 
       <a href="#top">Späť hore</a>
-    </section>
+
+      <div class="footer">
+        <a href="https://www.facebook.com/dndbeyond" target="_blank" rel="noopener" aria-label="Facebook">
+          <i class="fab fa-facebook-f"></i>
+        </a>
+        <a href="https://x.com/dndbeyond" target="_blank" rel="noopener" aria-label="Twitter">
+          <i class="fab fa-twitter"></i>
+        </a>
+        <a href="https://www.youtube.com/channel/UCPy-338BEVgDkQade0qJmkw" target="_blank" rel="noopener" aria-label="YouTube">
+          <i class="fab fa-youtube"></i>
+        </a>
+        <a href="https://www.instagram.com/dndbeyond/" target="_blank" rel="noopener" aria-label="Instagram">
+          <i class="fab fa-instagram"></i>
+        </a>
+      </div>
+      
+    </div>
   </main>
 
 </body>
