--- a/form.html
+++ b/form.html
@@ -21,7 +21,7 @@
   </header>
 
   <main>
-    <div class:"content">
+    <div class="content">
       <h2 id="top">Kontaktný formulár</h2>
       <a href="#form">Skoč na formulár</a>
 
