--- a/index.html
+++ b/index.html
@@ -50,6 +50,15 @@
         <img src="images/dnd.jpg" alt="Boj" width="800" style="border-radius:15px;">
       </div>
 
+      <div class="video-container">
+        <iframe 
+          src="https://www.youtube.com/shorts/W29XFPKz354" 
+          frameborder="0" 
+          allowfullscreen>
+        </iframe>
+      </div>
+
+
       <div class="footer">
         <a href="https://www.facebook.com/dndbeyond" target="_blank" rel="noopener" aria-label="Facebook">
           <i class="fab fa-facebook-f"></i>
