--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
       <div class="video-container">
         <iframe 
-          src="https://www.youtube.com/shorts/W29XFPKz354" 
+          src="https://www.youtube.com/embed/W29XFPKz354" 
           frameborder="0" 
           allowfullscreen>
         </iframe>
