--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
       <div class="video-container">
         <iframe 
           src="https://www.youtube.com/embed/W29XFPKz354?autoplay=1&mute=1" 
-          frameborder="0" 
+          frameborder="0"
+          allow="autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen>
         </iframe>
       </div>
