--- a/index.html
+++ b/index.html
@@ -50,14 +50,17 @@
         <img src="images/dnd.jpg" alt="Boj" width="800" style="border-radius:15px;">
       </div>
 
-      <div class="video-container">
-        <iframe 
-          src="https://www.youtube.com/embed/W29XFPKz354?autoplay=1&mute=1" 
-          frameborder="0"
-          allow="autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen>
-        </iframe>
+      <div class="page">
+        <div class="shorts-vertical-crop">
+          <iframe 
+            src="https://www.youtube.com/embed/W29XFPKz354?autoplay=1&mute=1&loop=1&playlist=W29XFPKz354" 
+            frameborder="0" 
+            allow="autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen>
+          </iframe>
+        </div>
       </div>
+
 
 
       <div class="footer">
