--- a/index.html
+++ b/index.html
@@ -49,16 +49,17 @@
         </p>
         <img src="images/dnd.jpg" alt="Boj" width="800" style="border-radius:15px;">
       </div>
-      
-      <div class="shorts-vertical-crop">
-        <iframe 
-          src="https://www.youtube.com/embed/W29XFPKz354?autoplay=1&mute=1&loop=1&playlist=W29XFPKz354" 
-          frameborder="0" 
-          allow="autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-          allowfullscreen>
-        </iframe>
-      </div>
 
+      <div class="center">
+        <div class="shorts-vertical-crop">
+          <iframe 
+            src="https://www.youtube.com/embed/W29XFPKz354?autoplay=1&mute=1&loop=1&playlist=W29XFPKz354" 
+            frameborder="0" 
+            allow="autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen>
+          </iframe>
+        </div>
+      </div>
 
 
       <div class="footer">
