--- a/spells.html
+++ b/spells.html
@@ -1,1 +1,72 @@
+<!DOCTYPE html>
+<html lang="sk">
+<head>
+  <meta charset="UTF-8">
+  <title>Zbrane - D&D</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+</head>
+<body>
 
+  <header>
+    <h1>Zbrane v D&D</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Domov</a></li>
+        <li><a href="races.html">Rasy</a></li>
+        <li><a href="classes.html">Triedy</a></li>
+        <li><a href="weapons.html">Zbrane</a></li>
+        <li><a href="form.html">Kontakt</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <div class="content">
+      <div class="center">
+        <h2>Bežné zbrane</h2>
+  
+        <!-- tabuľka -->
+        <table style="width:100%">
+          <tr style="height:100px">
+            <th style="width:30%">Zbraň</th>
+            <th style="width:30%">Typ</th>
+            <th style="width:20%">Poškodenie</th>
+          </tr>
+          <tr style="height:100px">
+            <td>Meč</td>
+            <td>Blízky boj</td>
+            <td>1d8</td>
+          </tr>
+          <tr style="height:100px">
+            <td>Luk</td>
+            <td>Na diaľku</td>
+            <td>1d6</td>
+          </tr>
+          <tr style="height:100px">
+            <td>Sekera</td>
+            <td>Blízky boj</td>
+            <td>1d10</td>
+          </tr>
+        </table>
+
+        <div class="footer">
+        <a href="https://www.facebook.com/dndbeyond" target="_blank" rel="noopener" aria-label="Facebook">
+          <i class="fab fa-facebook-f"></i>
+        </a>
+        <a href="https://x.com/dndbeyond" target="_blank" rel="noopener" aria-label="Twitter">
+          <i class="fab fa-twitter"></i>
+        </a>
+        <a href="https://www.youtube.com/channel/UCPy-338BEVgDkQade0qJmkw" target="_blank" rel="noopener" aria-label="YouTube">
+          <i class="fab fa-youtube"></i>
+        </a>
+        <a href="https://www.instagram.com/dndbeyond/" target="_blank" rel="noopener" aria-label="Instagram">
+          <i class="fab fa-instagram"></i>
+        </a>
+      </div>
+        
+    </div>
+  </main>
+
+</body>
+</html>
