--- a/form.html
+++ b/form.html
@@ -16,6 +16,7 @@
         <li><a href="races.html">Rasy</a></li>
         <li><a href="classes.html">Triedy</a></li>
         <li><a href="weapons.html">Zbrane</a></li>
+        <li><a href="spells.html">Kúzla</a></li>
         <li><a href="form.html">Kontakt</a></li>
       </ul>
     </nav>
