--- a/spells.html
+++ b/spells.html
@@ -30,24 +30,34 @@
         <!-- tabuľka -->
         <table style="width:100%">
           <tr style="height:100px">
-            <th style="width:30%">Zbraň</th>
+            <th style="width:30%">Obrázok</th>
+            <th style="width:30%">Level</th>
             <th style="width:30%">Typ</th>
             <th style="width:20%">Poškodenie</th>
           </tr>
           <tr style="height:100px">
-            <td>Meč</td>
+            <td>img</td>
+            <td>Burning hands</td>
             <td>Blízky boj</td>
-            <td>1d8</td>
+            <td>3d6 oheň</td>
           </tr>
           <tr style="height:100px">
-            <td>Luk</td>
+            <td>img</td>
+            <td>Ice knife</td>
             <td>Na diaľku</td>
-            <td>1d6</td>
+            <td>1d10 + 2d6 ľad</td>
           </tr>
           <tr style="height:100px">
-            <td>Sekera</td>
-            <td>Blízky boj</td>
-            <td>1d10</td>
+            <td>img</td>
+            <td>Witch bolt</td>
+            <td>Na diaľku</td>
+            <td>1d12 blesk</td>
+          </tr>
+          <tr style="height:100px">
+            <td>img</td>
+            <td>Magic Missile</td>
+            <td>Na diaľku</td>
+            <td>3d4 + 3 sila</td>
           </tr>
         </table>
 
