--- a/spells.html
+++ b/spells.html
@@ -2,14 +2,14 @@
 <html lang="sk">
 <head>
   <meta charset="UTF-8">
-  <title>Zbrane - D&D</title>
+  <title>Kúzla - D&D</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
 
   <header>
-    <h1>Zbrane v D&D</h1>
+    <h1>Kúzla v D&D</h1>
     <nav>
       <ul>
         <li><a href="index.html">Domov</a></li>
@@ -25,15 +25,15 @@
   <main>
     <div class="content">
       <div class="center">
-        <h2>Bežné zbrane</h2>
+        <h2>Kúzla na leveli 1</h2>
   
         <!-- tabuľka -->
         <table style="width:100%">
           <tr style="height:100px">
-            <th style="width:30%">Obrázok</th>
-            <th style="width:30%">Level</th>
-            <th style="width:30%">Typ</th>
-            <th style="width:20%">Poškodenie</th>
+            <th style="width:25%">Obrázok</th>
+            <th style="width:25%">Názov</th>
+            <th style="width:25%">Typ</th>
+            <th style="width:25%">Poškodenie</th>
           </tr>
           <tr style="height:100px">
             <td>img</td>
