--- a/spells.html
+++ b/spells.html
@@ -36,7 +36,7 @@
             <th style="width:25%">Poškodenie</th>
           </tr>
           <tr style="height:100px">
-            <td>img</td>
+            <td>images/spells/BurningHands.jpg</td>
             <td>Burning hands</td>
             <td>Blízky boj</td>
             <td>3d6 oheň</td>
