--- a/spells.html
+++ b/spells.html
@@ -36,25 +36,25 @@
             <th style="width:25%">Poškodenie</th>
           </tr>
           <tr style="height:100px">
-            <td><img src="images/spells/BurningHands.jpg" alt="Drak" width="800" style="border-radius:15px;"></td>
+            <td><img src="images/spells/BurningHands.jpg" alt="BurningHands" width="800" style="border-radius:15px;"></td>
             <td>Burning hands</td>
             <td>Blízky boj</td>
             <td>3d6 oheň</td>
           </tr>
           <tr style="height:100px">
-            <td><img src="images/spells/IceKnife.jpg" alt="Drak" width="800" style="border-radius:15px;"></td>
+            <td><img src="images/spells/IceKnife.jpg" alt="IceKnife" width="800" style="border-radius:15px;"></td>
             <td>Ice knife</td>
             <td>Na diaľku</td>
             <td>1d10 + 2d6 ľad</td>
           </tr>
           <tr style="height:100px">
-            <td><img src="images/spells/WitchBolt.jpg" alt="Drak" width="800" style="border-radius:15px;"></td>
+            <td><img src="images/spells/WitchBolt.jpg" alt="WitchBolt" width="800" style="border-radius:15px;"></td>
             <td>Witch bolt</td>
             <td>Na diaľku</td>
             <td>1d12 blesk</td>
           </tr>
           <tr style="height:100px">
-            <td><img src="images/spells/MagicMissle.jpg" alt="Drak" width="800" style="border-radius:15px;"></td>
+            <td><img src="images/spells/MagicMissile.jpg" alt="MagicMissile" width="800" style="border-radius:15px;"></td>
             <td>Magic Missile</td>
             <td>Na diaľku</td>
             <td>3d4 + 3 sila</td>
