--- a/races.html
+++ b/races.html
@@ -25,7 +25,7 @@
   <main>
     <div class="content">
       <div class="race-section right">
-        <img src="images/dragonborn.jpg" alt="Dragonborn" style="width:200px;height:300px;">
+        <img src="images/races/dragonborn.jpg" alt="Dragonborn" style="width:200px;height:300px;">
         <div class="race-text">
           <h1>Dragonborn</h1>
           <p>
@@ -53,11 +53,11 @@
             Takéto spoločenstvá existujú napríklad v prostrediach Greyhawku a Dragonlance.
           </p>
         </div>
-        <img src="images/trpaslik.jpg" alt="Trpaslik" style="width:200px;height:300px;">
+        <img src="images/races/trpaslik.jpg" alt="Trpaslik" style="width:200px;height:300px;">
       </div>
 
       <div class="race-section right">
-        <img src="images/elf2.jpg" alt="Elf" style="width:200px;height:300px;">
+        <img src="images/races/elf2.jpg" alt="Elf" style="width:200px;height:300px;">
         <div class="race-text">
           <h1>Elf</h1>
           <p>
@@ -90,11 +90,11 @@
           Mnohí z nich majú radi pocit strechy nad hlavou – aj keď tou „strechou“ nie je nič viac než klobúk.
           </p>
         </div>
-        <img src="images/gnome2.jpg" alt="Gnome" style="width:200px;height:300px;">
+        <img src="images/races/gnome2.jpg" alt="Gnome" style="width:200px;height:300px;">
       </div>
 
       <div class="race-section right">
-        <img src="images/tiefling.jpg" alt="Tiefling" style="width:200px;height:300px;">
+        <img src="images/races/tiefling.jpg" alt="Tiefling" style="width:200px;height:300px;">
         <div class="race-text">
           <h1>Tiefling</h1>
           <p>
@@ -121,11 +121,11 @@
           Iní orkovia sú spokojní, keď nechajú staré príbehy v minulosti a hľadajú vlastnú cestu.
           </p>
         </div>
-        <img src="images/orc.jpg" alt="Orc" style="width:200px;height:300px;">
+        <img src="images/races/orc.jpg" alt="Orc" style="width:200px;height:300px;">
       </div>
 
       <div class="race-section right">
-        <img src="images/hobit.jpg" alt="Hobit" style="width:200px;height:300px;">
+        <img src="images/races/hobit.jpg" alt="Hobit" style="width:200px;height:300px;">
         <div class="race-text">
           <h1>Hobit</h1>
           <p>
@@ -150,7 +150,7 @@
           Odtiaľ sa ľudia mohli rozšíriť do všetkých kútov multivesmíru a so sebou priniesť kozmopolitného ducha Mesta dverí.
           </p>
         </div>
-        <img src="images/human.jpg" alt="Human" style="width:200px;height:300px;">
+        <img src="images/races/human.jpg" alt="Human" style="width:200px;height:300px;">
       </div>
 
       <div class="footer">
