--- a/classes.html
+++ b/classes.html
@@ -25,7 +25,7 @@
   <main>
     <div class="content">
       <div class="race-section right">
-        <img src="images/barbarian.jpg" alt="Barbarian" style="width:100px;height:100px;">
+        <img src="images/classes/barbarian.jpg" alt="Barbarian" style="width:100px;height:100px;">
         <div class="race-text">
           <h1>Barbarian</h1>
           <p>
@@ -45,11 +45,11 @@
           Život barda je naplnený cestovaním, zbieraním vedomostí, rozprávaním príbehov a životom z vďaky publika – podobne ako u iných zabávačov. To, čo bardov odlišuje, je však ich hĺbka poznania a majstrovstvo v mágii.
           </p>
         </div>
-        <img src="images/bard.jpg" alt="Bard" style="width:100px;height:100px;">
+        <img src="images/classes/bard.jpg" alt="Bard" style="width:100px;height:100px;">
       </div>
 
       <div class="race-section right">
-        <img src="images/cleric.jpg" alt="Cleric" style="width:100px;height:100px;">
+        <img src="images/classes/cleric.jpg" alt="Cleric" style="width:100px;height:100px;">
         <div class="race-text">
           <h1>Cleric</h1>
           <p>
@@ -69,11 +69,11 @@
           Druids are concerned with the delicate ecological balance that sustains plant and animal life and with the need for people to live in harmony with nature. Druids often guard sacred sites or watch over regions of unspoiled nature, but when a significant danger arises, Druids take a more active role as adventurers who combat the threat.
           </p>
         </div>
-        <img src="images/druid.jpg" alt="Druid" style="width:100px;height:100px;">
+        <img src="images/classes/druid.jpg" alt="Druid" style="width:100px;height:100px;">
       </div>
 
       <div class="race-section right">
-        <img src="images/bojovnik.jpg" alt="Bojovnik" style="width:100px;height:100px;">
+        <img src="images/classes/bojovnik.jpg" alt="Bojovnik" style="width:100px;height:100px;">
         <div class="race-text">
           <h1>Fighter</h1>
           <p>
@@ -93,11 +93,11 @@
           Mnísi zvyčajne vnímajú dobrodružstvá ako skúšky svojho fyzického a mentálneho rozvoja. Neženie ich len túžba po zabíjaní príšer a hromadení pokladov – snažia sa pretvoriť samých seba na živé zbrane.
           </p>
         </div>
-        <img src="images/monk.jpg" alt="Monk" style="width:100px;height:100px;">
+        <img src="images/classes/monk.jpg" alt="Monk" style="width:100px;height:100px;">
       </div>
 
       <div class="race-section right">
-        <img src="images/paladin.jpg" alt="Paladin" style="width:100px;height:100px;">
+        <img src="images/classes/paladin.jpg" alt="Paladin" style="width:100px;height:100px;">
         <div class="race-text">
           <h1>Paladin</h1>
           <p>
@@ -116,11 +116,11 @@
           Vďaka spojeniu s prírodou dokážu Rangers tiež vyvolávať kúzla, ktoré využívajú prapôvodné sily divočiny. Ich schopnosti a mágia sú cvičené s ostrou presnosťou, aby chránili svet pred zverstvom príšer a tyranov.
           </p>
         </div>
-        <img src="images/ranger.jpg" alt="Ranger" style="width:100px;height:100px;">
+        <img src="images/classes/ranger.jpg" alt="Ranger" style="width:100px;height:100px;">
       </div>
 
       <div class="race-section right">
-        <img src="images/rogue.jpg" alt="Rogue" style="width:100px;height:100px;">
+        <img src="images/classes/rogue.jpg" alt="Rogue" style="width:100px;height:100px;">
         <div class="race-text">
           <h1>Rogue</h1>
           <p>
@@ -140,11 +140,11 @@
           Čarodejníci sú vzácni. Niektoré rodové línie produkujú presne jedného čarodejníka v každej generácii, no väčšinou sa talent pre mágiu objaví náhodne. Ľudia, ktorí túto magickú silu majú, rýchlo zistia, že sa nedá držať potichu – mágia čarodejníka túži byť používaná.
           </p>
         </div>
-        <img src="images/sorcerer.jpg" alt="Sorcerer" style="width:100px;height:100px;">
+        <img src="images/classes/sorcerer.jpg" alt="Sorcerer" style="width:100px;height:100px;">
       </div>
 
       <div class="race-section right">
-        <img src="images/warlock.jpg" alt="Warlock" style="width:100px;height:100px;">
+        <img src="images/classes/warlock.jpg" alt="Warlock" style="width:100px;height:100px;">
         <div class="race-text">
           <h1>Warlock</h1>
           <p>
@@ -165,7 +165,7 @@
           No lákavé poznanie ťahá aj tých najmenej dobrodružných kúzelníkov z bezpečia ich knižníc a laboratórií do rozpadávajúcich sa ruín a stratených miest. Väčšina kúzelníkov verí, že ich predchodcovia v dávnych civilizáciách poznali tajomstvá mágie, ktoré sa stratili v priebehu vekov, a ich objavenie by mohlo odomknúť cestu k moci väčšej než akákoľvek mágia dostupná v súčasnej dobe.
           </p>
         </div>
-        <img src="images/wizard.jpg" alt="Wizard" style="width:100px;height:100px;">
+        <img src="images/classes/wizard.jpg" alt="Wizard" style="width:100px;height:100px;">
       </div>
 
       <div class="footer">
