--- a/spells.html
+++ b/spells.html
@@ -30,34 +30,34 @@
         <!-- tabuľka -->
         <table style="width:100%">
           <tr style="height:100px">
-            <th style="width:25%">Obrázok</th>
+            <th style="width:20%">Obrázok</th>
             <th style="width:25%">Názov</th>
             <th style="width:25%">Typ</th>
-            <th style="width:25%">Poškodenie</th>
+            <th style="width:30%">Poškodenie</th>
           </tr>
           <tr style="height:100px">
             <td><img src="images/spells/BurningHands.jpg" alt="BurningHands" width="100" style="border-radius:15px;"></td>
             <td>Burning hands</td>
             <td>Blízky boj</td>
-            <td>3d6 oheň</td>
+            <td>3d6 Ohňové poškodenie</td>
           </tr>
           <tr style="height:100px">
             <td><img src="images/spells/IceKnife.jpg" alt="IceKnife" width="100" style="border-radius:15px;"></td>
             <td>Ice knife</td>
             <td>Na diaľku</td>
-            <td>1d10 + 2d6 ľad</td>
+            <td>1d10 Bodné poškodenie + 2d6 Chladné poškodenie</td>
           </tr>
           <tr style="height:100px">
             <td><img src="images/spells/WitchBolt.jpg" alt="WitchBolt" width="100" style="border-radius:15px;"></td>
             <td>Witch bolt</td>
             <td>Na diaľku</td>
-            <td>1d12 blesk</td>
+            <td>1d12 Bleskové poškodenie</td>
           </tr>
           <tr style="height:100px">
             <td><img src="images/spells/MagicMissile.jpg" alt="MagicMissile" width="100" style="border-radius:15px;"></td>
             <td>Magic Missile</td>
             <td>Na diaľku</td>
-            <td>3d4 + 3 sila</td>
+            <td>3d4 + 3 Silove poškodenie</td>
           </tr>
         </table>
 
