--- a/spells.html
+++ b/spells.html
@@ -59,6 +59,12 @@
             <td>Na diaľku</td>
             <td>3d4 + 3 Silove poškodenie</td>
           </tr>
+          <tr style="height:100px">
+            <td><img src="images/spells/RayofSickness.jpg" alt="RayofSickness" width="100" style="border-radius:15px;"></td>
+            <td>Ray of Sickness</td>
+            <td>Na diaľku</td>
+            <td>2d8 Jedovaté poškodenie</td>
+          </tr>
         </table>
 
         <div class="footer">
