--- a/spells.html
+++ b/spells.html
@@ -25,47 +25,63 @@
   <main>
     <div class="content">
       <div class="center">
-        <h2>Kúzla na leveli 1</h2>
-  
-        <!-- tabuľka -->
-        <table style="width:100%">
-          <tr style="height:100px">
-            <th style="width:15%">Obrázok</th>
-            <th style="width:25%">Názov</th>
-            <th style="width:25%">Typ</th>
-            <th style="width:35%">Poškodenie</th>
-          </tr>
-          <tr style="height:100px">
-            <td><img src="images/spells/BurningHands.jpg" alt="BurningHands" width="100" style="border-radius:15px;"></td>
-            <td>Burning hands</td>
-            <td>Blízky boj</td>
-            <td>3d6 Ohňové poškodenie</td>
-          </tr>
-          <tr style="height:100px">
-            <td><img src="images/spells/IceKnife.jpg" alt="IceKnife" width="100" style="border-radius:15px;"></td>
-            <td>Ice knife</td>
-            <td>Na diaľku</td>
-            <td>1d10 Bodné poškodenie + 2d6 Chladné poškodenie</td>
-          </tr>
-          <tr style="height:100px">
-            <td><img src="images/spells/WitchBolt.jpg" alt="WitchBolt" width="100" style="border-radius:15px;"></td>
-            <td>Witch bolt</td>
-            <td>Na diaľku</td>
-            <td>1d12 Bleskové poškodenie</td>
-          </tr>
-          <tr style="height:100px">
-            <td><img src="images/spells/MagicMissile.jpg" alt="MagicMissile" width="100" style="border-radius:15px;"></td>
-            <td>Magic Missile</td>
-            <td>Na diaľku</td>
-            <td>3d4 + 3 Silove poškodenie</td>
-          </tr>
-          <tr style="height:100px">
-            <td><img src="images/spells/RayofSickness.jpg" alt="RayofSickness" width="100" style="border-radius:15px;"></td>
-            <td>Ray of Sickness</td>
-            <td>Na diaľku</td>
-            <td>2d8 Jedovaté poškodenie</td>
-          </tr>
-        </table>
+        <!-- Navigačný zoznam -->
+        <ul>
+          <li><a href="#level1">Level 1</a></li>
+          <li><a href="#level2">Level 2</a></li>
+          <li><a href="#level3">Level 3</a></li>
+        </ul>
+
+        <div id="level1">
+          <h2>Kúzla na leveli 1</h2>
+          <!-- tabuľka -->
+          <table style="width:100%">
+            <tr style="height:100px">
+              <th style="width:15%">Obrázok</th>
+              <th style="width:25%">Názov</th>
+              <th style="width:25%">Typ</th>
+              <th style="width:35%">Poškodenie</th>
+            </tr>
+            <tr style="height:100px">
+              <td><img src="images/spells/BurningHands.jpg" alt="BurningHands" width="100" style="border-radius:15px;"></td>
+              <td>Burning hands</td>
+              <td>Blízky boj</td>
+              <td>3d6 Ohňové poškodenie</td>
+            </tr>
+            <tr style="height:100px">
+              <td><img src="images/spells/IceKnife.jpg" alt="IceKnife" width="100" style="border-radius:15px;"></td>
+              <td>Ice knife</td>
+              <td>Na diaľku</td>
+              <td>1d10 Bodné poškodenie + 2d6 Chladné poškodenie</td>
+            </tr>
+            <tr style="height:100px">
+              <td><img src="images/spells/WitchBolt.jpg" alt="WitchBolt" width="100" style="border-radius:15px;"></td>
+              <td>Witch bolt</td>
+              <td>Na diaľku</td>
+              <td>1d12 Bleskové poškodenie</td>
+            </tr>
+            <tr style="height:100px">
+              <td><img src="images/spells/MagicMissile.jpg" alt="MagicMissile" width="100" style="border-radius:15px;"></td>
+              <td>Magic Missile</td>
+              <td>Na diaľku</td>
+              <td>3d4 + 3 Silove poškodenie</td>
+            </tr>
+            <tr style="height:100px">
+              <td><img src="images/spells/RayofSickness.jpg" alt="RayofSickness" width="100" style="border-radius:15px;"></td>
+              <td>Ray of Sickness</td>
+              <td>Na diaľku</td>
+              <td>2d8 Jedovaté poškodenie</td>
+            </tr>
+          </table>
+        </div>
+
+        <div id="level2">
+          <h2>Kúzla na leveli 2</h2>
+        </div>
+
+        <div id="level3">
+          <h2>Kúzla na leveli 3</h2>
+        </div>
 
         <div class="footer">
         <a href="https://www.facebook.com/dndbeyond" target="_blank" rel="noopener" aria-label="Facebook">
