--- a/spells.html
+++ b/spells.html
@@ -26,7 +26,7 @@
     <div class="content">
       <div class="center">
         <!-- Navigačný zoznam -->
-        <ul class="spells">
+        <ul class="menu">
           <li><a href="#level1">Level 1</a></li>
           <li><a href="#level2">Level 2</a></li>
           <li><a href="#level3">Level 3</a></li>
